--- a/Movie_App/Movie_App/Scenes/MovieList/MovieList/MovieListTableViewCell.xib
+++ b/Movie_App/Movie_App/Scenes/MovieList/MovieList/MovieListTableViewCell.xib
@@ -19,12 +19,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="317"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PmY-Kk-NPw">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PmY-Kk-NPw">
                         <rect key="frame" x="15" y="15" width="100" height="150"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="150" id="ZWa-QA-WHC"/>
                             <constraint firstAttribute="width" constant="100" id="bsZ-qC-qgv"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="7.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Pk-2R-41D">
                         <rect key="frame" x="130" y="20" width="230" height="23"/>
@@ -32,21 +37,32 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxd-O7-mHY">
-                        <rect key="frame" x="130" y="51" width="75" height="20"/>
+                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxd-O7-mHY" customClass="FloatRatingView" customModule="Movie_App" customModuleProvider="target">
+                        <rect key="frame" x="130" y="51" width="110" height="18"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="hh8-of-ZCM"/>
+                            <constraint firstAttribute="width" constant="110" id="WSI-8t-9Pu"/>
+                            <constraint firstAttribute="height" constant="18" id="hh8-of-ZCM"/>
                         </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="star_not_filled"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="fullImage" value="star_filled"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="minRating">
+                                <integer key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="maxRating">
+                                <integer key="value" value="5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.75" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XxZ-gc-82Y">
-                        <rect key="frame" x="211" y="53" width="28" height="16"/>
+                        <rect key="frame" x="246" y="52" width="28" height="16"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                         <color key="textColor" red="0.96862745098039216" green="0.69803921568627447" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="D" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IzP-69-mJK">
-                        <rect key="frame" x="249" y="51" width="30" height="20"/>
+                        <rect key="frame" x="284" y="50" width="30" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="R8o-eP-CWZ"/>
                             <constraint firstAttribute="width" constant="30" id="huE-cs-prR"/>
@@ -67,23 +83,23 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sic-9P-7PA">
-                        <rect key="frame" x="228" y="86" width="83" height="17"/>
+                        <rect key="frame" x="218" y="84" width="83" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6EN-hm-dVV">
-                        <rect key="frame" x="130" y="118" width="230" height="134"/>
+                        <rect key="frame" x="130" y="116" width="230" height="134"/>
                         <string key="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WX1-bo-NdS">
-                        <rect key="frame" x="260" y="267" width="100" height="35"/>
+                        <rect key="frame" x="235" y="265" width="125" height="35"/>
                         <color key="backgroundColor" red="0.12941176470588234" green="0.1803921568627451" blue="0.32156862745098036" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="Dee-8O-lRt"/>
-                            <constraint firstAttribute="width" constant="100" id="pl7-2y-6n5"/>
+                            <constraint firstAttribute="width" constant="125" id="pl7-2y-6n5"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <state key="normal" title="BUY TICKET">
@@ -96,7 +112,7 @@
                         </userDefinedRuntimeAttributes>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vno-Ns-LHC">
-                        <rect key="frame" x="130" y="86" width="83" height="17"/>
+                        <rect key="frame" x="130" y="84" width="83" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -109,7 +125,7 @@
                     <constraint firstItem="WX1-bo-NdS" firstAttribute="top" secondItem="6EN-hm-dVV" secondAttribute="bottom" constant="15" id="6ZB-af-wLn"/>
                     <constraint firstAttribute="trailing" secondItem="6EN-hm-dVV" secondAttribute="trailing" constant="15" id="78h-aa-xnO"/>
                     <constraint firstItem="PmY-Kk-NPw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="BsE-s5-sbq"/>
-                    <constraint firstItem="Sic-9P-7PA" firstAttribute="leading" secondItem="vno-Ns-LHC" secondAttribute="trailing" constant="15" id="Fy3-gq-awL"/>
+                    <constraint firstItem="Sic-9P-7PA" firstAttribute="leading" secondItem="vno-Ns-LHC" secondAttribute="trailing" constant="5" id="Fy3-gq-awL"/>
                     <constraint firstItem="0Pk-2R-41D" firstAttribute="top" secondItem="PmY-Kk-NPw" secondAttribute="top" constant="5" id="P0c-0p-MVN"/>
                     <constraint firstAttribute="trailing" secondItem="0Pk-2R-41D" secondAttribute="trailing" constant="15" id="PGi-aD-U5O"/>
                     <constraint firstItem="XxZ-gc-82Y" firstAttribute="leading" secondItem="Qxd-O7-mHY" secondAttribute="trailing" constant="6" id="RK5-CR-14n"/>
@@ -122,7 +138,6 @@
                     <constraint firstItem="6EN-hm-dVV" firstAttribute="top" secondItem="vno-Ns-LHC" secondAttribute="bottom" constant="15" id="koY-ei-bke"/>
                     <constraint firstItem="Sic-9P-7PA" firstAttribute="centerY" secondItem="vno-Ns-LHC" secondAttribute="centerY" id="mVr-1V-BJV"/>
                     <constraint firstItem="IzP-69-mJK" firstAttribute="centerY" secondItem="XxZ-gc-82Y" secondAttribute="centerY" id="n9K-Mh-eIh"/>
-                    <constraint firstItem="Qxd-O7-mHY" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.2" id="n9d-yf-Ii8"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="WX1-bo-NdS" secondAttribute="bottom" constant="15" id="s5Z-kY-rBJ"/>
                     <constraint firstItem="XxZ-gc-82Y" firstAttribute="centerY" secondItem="Qxd-O7-mHY" secondAttribute="centerY" id="ukd-uK-4YE"/>
                     <constraint firstItem="Qxd-O7-mHY" firstAttribute="top" secondItem="0Pk-2R-41D" secondAttribute="bottom" constant="8" id="wXt-Ah-PBJ"/>
@@ -136,8 +151,13 @@
                 <outlet property="lblRating" destination="XxZ-gc-82Y" id="n8u-Jb-1Io"/>
                 <outlet property="lblReleaseDate" destination="Sic-9P-7PA" id="ooo-mc-UeU"/>
                 <outlet property="lblTitle" destination="0Pk-2R-41D" id="s8o-iN-WsC"/>
+                <outlet property="vwRating" destination="Qxd-O7-mHY" id="K3d-Kj-det"/>
             </connections>
             <point key="canvasLocation" x="202.40000000000001" y="173.61319340329837"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="star_filled" width="96" height="96"/>
+        <image name="star_not_filled" width="96" height="96"/>
+    </resources>
 </document>
